# MadDevsTestTask

./: .gitignore  README.md  main.py  msg_split.py  pyproject.toml  split_msg.py  tests.py
helpers/: __init__.py  exceptions.py  functions.py  stack.py
